Updated the formatting for the encryption and decryption. The operations now take place separately from the writing to file. IV and salt are saved to encryption file header during encryption and extracted from the header during decryption.